# kaos

./: .gitignore  .pre-commit-config.yaml  README.md  geometry.ts  index.html  kaos.ts  main.ts  package-lock.json  package.json
.idx/: dev.nix
chaos_py/: pyproject.toml
kaos_cpp/: CMakeLists.txt
kaos_go/: go.mod  kaos.go
kaos_py/: README.md  kaos.py  pyproject.toml
kaos_py/kaos_py/: __init__.py  backend_bmp.py  geometry.py  kaos_game.py
