[tool.poetry]
name = "kaos-py"
version = "0.1.0"
description = ""
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
kaos = "kaos_py:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
