[tool.poetry]
name = "kaos"
version = "0.1.0"
description = ""
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
numpy = "^2.0.1"
fastrand = "^2.0.1"

[tool.poetry.scripts]
kaos = "kaos:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
